add controller test

--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,11 @@ dependencies {
     compile group: 'org.jetbrains', name: 'markdown', version: '0.1.28'
 
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: springBootVersion
+    testCompile group: 'org.testng', name: 'testng', version: '6.13.1'
+
     testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+
+    testImplementation group: 'io.mockk', name: 'mockk', version: '1.8.1'
 }
 
 apply from: 'tasks.gradle'
