--- a/tasks.gradle
+++ b/tasks.gradle
@@ -49,6 +49,9 @@ jacocoTestReport {
 
 // must be called before JaCoCo tasks
 test {
+    // add TestNG support
+    useTestNG()
+
     jacoco {
         append = false
     }
