some test conf changes

--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ buildscript {
     ext {
         kotlinVersion = '1.2.41'
         springBootVersion = '2.0.2.RELEASE'
+        cucumberVersion = '3.0.2'
     }
     repositories {
         mavenCentral()
@@ -62,7 +63,9 @@ dependencies {
 
     testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 
-    testCompile 'io.cucumber:cucumber-java8:2.+'
+    testCompile group: 'io.cucumber', name: 'cucumber-core', version: cucumberVersion
+    testCompile group: 'io.cucumber', name: 'cucumber-java8', version: cucumberVersion
+    testCompile group: 'io.cucumber', name: 'cucumber-testng', version: cucumberVersion
     testCompile group: 'org.seleniumhq.selenium', name: 'selenium-java',  version: '2.53.0'
     testCompile group: 'net.serenity-bdd', name: 'serenity-core', version: '1.9.20'
 }
