--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ buildscript {
     ext {
         kotlinVersion = '1.2.41'
         springBootVersion = '2.0.2.RELEASE'
-        cucumberVersion = '3.0.2'
+        cucumberVersion = '2.+'
     }
     repositories {
         mavenCentral()
@@ -16,7 +16,10 @@ buildscript {
 
 plugins {
     id "io.gitlab.arturbosch.detekt" version "1.0.0.RC7-2"
+    id "com.commercehub.cucumber-jvm" version "0.11"
 }
+
+addCucumberSuite 'cucumberTest'
 
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-spring'
@@ -46,7 +49,6 @@ repositories {
     maven { url 'https://dl.bintray.com/jetbrains/markdown/' }
 }
 
-
 dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: springBootVersion
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: springBootVersion
@@ -59,15 +61,15 @@ dependencies {
 
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: springBootVersion
     testCompile group: 'org.testng', name: 'testng', version: '6.13.1'
-    testImplementation group: 'io.mockk', name: 'mockk', version: '1.8.1'
+    implementation group: 'io.mockk', name: 'mockk', version: '1.8.1'
 
     testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 
-    testCompile group: 'io.cucumber', name: 'cucumber-core', version: cucumberVersion
-    testCompile group: 'io.cucumber', name: 'cucumber-java8', version: cucumberVersion
-    testCompile group: 'io.cucumber', name: 'cucumber-testng', version: cucumberVersion
-    testCompile group: 'org.seleniumhq.selenium', name: 'selenium-java',  version: '2.53.0'
-    testCompile group: 'net.serenity-bdd', name: 'serenity-core', version: '1.9.20'
+    compile group: 'io.cucumber', name: 'cucumber-core', version: cucumberVersion
+    compile group: 'io.cucumber', name: 'cucumber-java8', version: cucumberVersion
+    compile group: 'io.cucumber', name: 'cucumber-testng', version: cucumberVersion
+    compile group: 'org.seleniumhq.selenium', name: 'selenium-java',  version: '2.53.0'
+    compile group: 'net.serenity-bdd', name: 'serenity-core', version: '1.9.20'
 }
 
 apply from: 'tasks.gradle'
