ext library add

--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,7 @@ compileTestKotlin {
 repositories {
     jcenter()
     maven { url 'https://dl.bintray.com/jetbrains/markdown/' }
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
@@ -56,6 +57,8 @@ dependencies {
     implementation group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.9.5'
     implementation group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-jdk8', version: kotlinVersion
     implementation group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: kotlinVersion
+
+    implementation group: 'com.github.carleslc', name: 'kotlin-extensions', version: '0.7.6'
 
     implementation group: 'org.jetbrains', name: 'markdown', version: '0.1.31'
 
